--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.12",
     "mongoose": "^7.5.2",
+    "nodemon": "^3.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
